# supercollider

./: CODE_OF_CONDUCT.md
.github/workflows/: actions.yml
QtCollider/: CMakeLists.txt  Common.h  QObjectProxy.h  debug.h
QtCollider/widgets/soundfileview/: view.cpp
cmake_modules/: FindSndfile.cmake
